# anticuss-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
src/: config.py  database.py  main.py
src/handlers/: admin.py  basic.py  monitor.py
src/utils/: common.py  graphs.py
tests/: conftest.py  test_database.py  test_monitor.py
